[package]
name = "egui-cfg"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["egui", "cfg", "control flow graph", "visualization", "graph"]
description = "egui library for displaying control flow graphs using petgraph."
repository = "https://github.com/teabound/egui-cfg"
homepage = "https://github.com/teabound/egui-cfg"
documentation = "https://docs.rs/egui-cfg"
readme = "README.md"

[dependencies]
egui = "0.32"
petgraph = "0.8.1"
rust-sugiyama = "0.4.0"

[dev-dependencies]
eframe = "0.32"
